--- a/index.html
+++ b/index.html
@@ -4,35 +4,89 @@
     <title>Gabby Perla</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Dosis|Shrikhand" rel="stylesheet">
+</head>
 
-  <body>
+
 <i><h1>Gabby's Life</h1></i>
+<section>
 
-<h2>Gabby's Past</h2>
-<a href=""> Link </a>
-<u><h3>Events that happened in the past</h3></u>
+<b><h2><span class="red">Gabby's</span> Past</h2></b>
+<p>Gabby was born in Syracuse, New York  on February 23, 2001 and lived
+there until she was 14 years old. She moved to Greenville because her
+dad had the option to move anywhere in the country, and chose here based
+on a recommendation. Gabby went to St. Margaret’s Elementary (pre-k3 - 6),
+then <a href="http://bishopgrimes.org/" target="_blank">Bishop Grimes JR/SR Prep</a> for 7th and 8th grade. She played varsity
+tennis at both Bishop Grimes and Mann. Mann is the first public school
+that she has been to.</p>
+
+<img class="right" class="" src="img/0.jpg" alt="gaby with her friends when she was small">
+
+<h3>Events that happened in the past</h3>
 <ol>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li>Graduated elementary school and moved onto high school</li>
+<li>Made varsity tennis in 7th grade</li>
+<li>Found out in late June that her family was moving to South Carolina</li>
+<li>Moved out of their house in mid-July</li>
+<li>Moved to South Carolina August 1st</li>
+<li>Started public school for the first time</li>
+</ol>
+</section>
+<section>
+<b><h2><span class="red">Gabby's</span> Present</h2></b>
+
+<p>Gabby’s family consists of her dad, mom, older brother Jordon, younger brother
+ Ashton, and a cat and dog. She has played tennis since she was in 3rd grade,
+  and is still playing today. She has been playing on varsity since 7th grade.
+  Gabby is currently a junior in <a href="https://www.greenville.k12.sc.us/jlmann/" target="_blank">high school</a>, her brother Ashton is a sophomore,
+   and her brother Jordon is working in New York. We visit New York often throughout
+    the year to visit family and friends. </p>
+	<p>For her, visiting New York is a good and bad thing. It is mostly a good thing because she
+  gets to see her family and friends. It is only a bad thing when she has to
+   leave because there will be a long period of time before they'll be able to see them again.
+    Everytime Gabby goes to New York, she stays at her friend Machaela’s house
+     because that is like her second family. She will walk into her house and just
+     wait for them to come home and surprise them. It honestly is the best feeling
+      in the world for her.</p>
+      <img class="center"src="img/gabbypresent.png" alt="gabby with her friends at school">
+      <img class="center"src="img/gabbypresent2.png" alt="gabby with her friend Machaela">
+</section>
+<section>
+
+
+<b><h2><span class="red">Gabby's</span> Future</h2></b>
+
+<p>After college, Gabby has no idea what she wants to do as a career, but
+  she is considering doing something with psychology. She is looking to go
+   to college somewhere in SC, or she might wait a year and move back to New
+York and go to college there. Gabby is indecisive and is a type of person who likes to live in
+the moment, so she won’t officially know until her senior year. She wants
+to stay close to her family, but she also wants to be a good distance away so
+she can prove her independence. Gabby is a very realistic person, especially when
+it comes to money, so she isn’t expecting to be rich, but is expecting to be successful.
+</p><img class="right"src="img/monkboi.jpg" alt="Monkey Gabby wants in the future">
+
+
+<h3>Bucket List</h3>
+<ol>
+<li>Be successful in life</li>
+<li>Go cage-diving with sharks</li>
+<li>Go <a href="https://en.wikipedia.org/wiki/Zip-line" target="_blank"> ziplining </a> in a foreign country</li>
+<li>Go <a href="https://en.wikipedia.org/wiki/Parachuting"target="_blank"> skydiving </a></li>
+<li>Own a small monkey</li>
 </ol>
 
-<h2>Gabby's Present</h2>
+</section>
 
 
-
-
-
-<h2>Gabby's Future</h2>
-
-
-
-
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+by Allie T
 
 
 
