--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bad+Script|Dosis|Shrikhand" rel="stylesheet">
 </head>
 
+<body>
 
 <i><h1>Gabby's Life</h1></i>
 <section>
@@ -20,7 +21,7 @@ then <a href="http://bishopgrimes.org/" target="_blank">Bishop Grimes JR/SR Prep
 tennis at both Bishop Grimes and Mann. Mann is the first public school
 that she has been to.</p>
 
-<img class="right" class="" src="img/1.jpg" alt="gaby with her friends when she was small">
+<img class="right" class="" src="img/0.jpg" alt="gaby with her friends when she was small">
 
 <h3>Events that happened in the past</h3>
 <ol>
@@ -68,13 +69,13 @@ it comes to money, so she isn’t expecting to be rich, but is expecting to be s
 
 
 <h3>Bucket List</h3>
-<ol>
+<ul>
 <li>Be successful in life</li>
 <li>Go cage-diving with sharks</li>
 <li>Go <a href="https://en.wikipedia.org/wiki/Zip-line" target="_blank"> ziplining </a> in a foreign country</li>
 <li>Go <a href="https://en.wikipedia.org/wiki/Parachuting"target="_blank"> skydiving </a></li>
 <li>Own a small monkey</li>
-</ol>
+</ul>
 
 </section>
 
